crates/pardosa-genome/tests/compile_fail/nested_isize.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
struct Bad {
    offset: Option<isize>,
}

fn main() {}
